// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Resizable (snapshot) renders horizontal group 1`] = `
<div
  class="flex h-full w-full data-[panel-group-direction=vertical]:flex-col"
  data-panel-group=""
  data-panel-group-direction="horizontal"
  data-panel-group-id="_r_0_"
  style="display: flex; flex-direction: row; height: 100%; overflow: hidden; width: 100%;"
>
  <div
    class=""
    data-panel=""
    data-panel-group-id="_r_0_"
    data-panel-id="_r_1_"
    data-panel-size="50.0"
    id="_r_1_"
    style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: hidden;"
  >
    Left
  </div>
  <div
    aria-controls="_r_1_"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative flex w-px items-center justify-center bg-border after:absolute after:inset-y-0 after:left-1/2 after:w-1 after:-translate-x-1/2 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-1 data-[panel-group-direction=vertical]:h-px data-[panel-group-direction=vertical]:w-full data-[panel-group-direction=vertical]:after:left-0 data-[panel-group-direction=vertical]:after:h-1 data-[panel-group-direction=vertical]:after:w-full data-[panel-group-direction=vertical]:after:-translate-y-1/2 data-[panel-group-direction=vertical]:after:translate-x-0 [&[data-panel-group-direction=vertical]>div]:rotate-90"
    data-panel-group-direction="horizontal"
    data-panel-group-id="_r_0_"
    data-panel-resize-handle-enabled="true"
    data-panel-resize-handle-id="_r_2_"
    data-resize-handle=""
    data-resize-handle-state="inactive"
    role="separator"
    style="user-select: none;"
    tabindex="0"
  />
  <div
    class=""
    data-panel=""
    data-panel-group-id="_r_0_"
    data-panel-id="_r_3_"
    data-panel-size="50.0"
    id="_r_3_"
    style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: hidden;"
  >
    Right
  </div>
</div>
`;

exports[`Resizable (snapshot) renders vertical group with handle indicator 1`] = `
<div
  class="flex h-full w-full data-[panel-group-direction=vertical]:flex-col"
  data-panel-group=""
  data-panel-group-direction="vertical"
  data-panel-group-id="_r_4_"
  style="display: flex; flex-direction: column; height: 100%; overflow: hidden; width: 100%;"
>
  <div
    class=""
    data-panel=""
    data-panel-group-id="_r_4_"
    data-panel-id="_r_5_"
    data-panel-size="50.0"
    id="_r_5_"
    style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: hidden;"
  >
    Top
  </div>
  <div
    aria-controls="_r_5_"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative flex w-px items-center justify-center bg-border after:absolute after:inset-y-0 after:left-1/2 after:w-1 after:-translate-x-1/2 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-1 data-[panel-group-direction=vertical]:h-px data-[panel-group-direction=vertical]:w-full data-[panel-group-direction=vertical]:after:left-0 data-[panel-group-direction=vertical]:after:h-1 data-[panel-group-direction=vertical]:after:w-full data-[panel-group-direction=vertical]:after:-translate-y-1/2 data-[panel-group-direction=vertical]:after:translate-x-0 [&[data-panel-group-direction=vertical]>div]:rotate-90"
    data-panel-group-direction="vertical"
    data-panel-group-id="_r_4_"
    data-panel-resize-handle-enabled="true"
    data-panel-resize-handle-id="_r_6_"
    data-resize-handle=""
    data-resize-handle-state="inactive"
    role="separator"
    style="user-select: none;"
    tabindex="0"
  >
    <div
      class="z-10 flex h-4 w-3 items-center justify-center rounded-sm border bg-border"
    >
      <svg
        class="lucide lucide-grip-vertical size-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
    </div>
  </div>
  <div
    class=""
    data-panel=""
    data-panel-group-id="_r_4_"
    data-panel-id="_r_7_"
    data-panel-size="50.0"
    id="_r_7_"
    style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: hidden;"
  >
    Bottom
  </div>
</div>
`;
